--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vinyl-source-stream": "^0.1.1"
   },
   "dependencies": {
-    "angular": "^1.3.6",
+    "angular": "1.5.8",
     "angular-hint": "0.3.8",
     "browserify-eep": "^0.3.1"
   },
